--- a/login/index.html
+++ b/login/index.html
@@ -8,7 +8,11 @@
   <script src='Login.js'></script>
   <script>
     var app = new Login({
-      target: document.querySelector( 'main' )
+      target: document.querySelector( 'main' ),
+      data: {
+        email: 'e',
+        password: '111'
+      }
     });
   </script>
 </body>
