--- a/login/index.html
+++ b/login/index.html
@@ -10,8 +10,8 @@
     var app = new Login({
       target: document.querySelector( 'main' ),
       data: {
-        email: 'e',
-        password: '111'
+        email: '',
+        password: ''
       }
     });
   </script>
