--- a/login/Login.html
+++ b/login/Login.html
@@ -2,18 +2,27 @@
 
 email: <input type="text" name="email" bind:value='email'><br>
 password: <input type="password" name="password" bind:value='password'><br>
-<button on:click='login(email, password)'>click and hold</button>
+<button on:click='login(email, password)'>Login</button>
 
 <script>
   export default {
      methods: {
       login (email, password) {
-        console.log(email + password);
+        if(valid(email, password)) {
+          login(email, password);
+          return;
+        }
+
+        console.log("error validating");
       }
     }
   }
 
-function validate() {
-  return true;
-}
+  function valid() {
+    return true;
+  }
+
+  function login() {
+    console.log("make an http call");
+  }
 </script>
